# Multimedia

./: README.md  build.gradle  settings.gradle  simpledependencies.gradle
app/: build.gradle
commonmedia/: build.gradle
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/cn/idu/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: FFUtil.cpp  FrameQueue.cpp  FrameQueue.h  H264SoftDecode.cpp  H264SoftDecode.h  Log.h  RSFFmpeg.cpp  RSFFmpeg.h  RtmpPlayer.cpp  RtmpPlayer.h  RtmpPlayerJNI.cpp  cn_idu_ffmpeg_RSFFmpeg.h  common.h
ffmpeg/src/main/cpp/include/libavutil/: ffversion.h
ffmpeg/src/main/java/cn/idu/ffmpeg/: InfoCallback.java  RSFFmpeg.java  RtmpPlayer.java
ffmpeg/src/test/java/cn/idu/ffmpeg/: ExampleUnitTest.kt
gles_helper/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
simpleplayer/: build.gradle
simplepush/: CMakeLists.txt  build.gradle
simplepush/src/androidTest/java/cn/idu/simplepush/: ExampleInstrumentedTest.java
simplepush/src/main/: AndroidManifest.xml
simplepush/src/main/cpp/: DoubleQueue.cpp  DoubleQueue.h  Log.h  RSPush.cpp  RSPush.h  cn_idu_simplepush_NativePlayer.h
simplepush/src/main/java/cn/idu/simplepush/: AVStreamPush.java  AudioInfo.java  AudioPush.java  BasePush.java  MainActivity.java  NativePlayer.java  VideoInfo.java  VideoPush.java
simplepush/src/main/java/cn/idu/simplepush/encodec/: MediaCodecUtil.java
simplepush/src/main/res/layout/: activity_main.xml
simplepush/src/main/res/values/: strings.xml
simplepush/src/test/java/cn/idu/simplepush/: ExampleUnitTest.java
(+28 files in other folders)
